[package]
name = "wasm-bhtsne"
version = "0.3.1"
authors = ["lv291 <baiunco291@proton.me>"]
description = "Exact and Barnes-Hut implementations of t-SNE in wasm"
license = "MIT"
repository = "https://github.com/Lv-291/wasm-bhtsne"
edition = "2018"
readme = "README.md"

[lib]
# rlib: to ensure that our library can be unit tested with wasm-pack test
crate-type = ["cdylib", "rlib"]

[dependencies]
rayon = { version = "1.8.1", features = ["web_spin_lock"] }
wasm-bindgen-rayon = { version = "1.2.1", optional = true}
wasm-bindgen = { version = "0.2.84"}
getrandom = { version = "0.2.3", default-features=false, features=["js"] }
num-traits = "0.2.15"
rand = "0.8.5"
rand_distr = "0.4.3"
js-sys = "0.3.64"

[features]
parallel = ["wasm-bindgen-rayon"]

[profile.release]
opt-level = 's'

