[package]
name = "wasm-bhtsne"
version = "1.2.0"
authors = ["lv291 <baiunco291@proton.me>"]
description = "Barnes-Hut implementations of t-SNE in wasm"
license = "MIT"
repository = "https://github.com/Lv-291/wasm-bhtsne"
edition = "2021"
categories = ["algorithms", "science", "visualization"]
keywords = ["tsne", "data-visualization", "webassembly", "wasm", "rust"]
readme = "README.md"

[lib]
# rlib: to ensure that our library can be unit tested with wasm-pack test
crate-type = ["cdylib", "rlib"]

[dependencies]
rayon = { version = "1.8.1", features = ["web_spin_lock"] }
wasm-bindgen-rayon = { version = "1.2.1", optional = true}
wasm-bindgen = "0.2.84"
getrandom = { version = "0.2.3", default-features=false, features=["js"] }
num-traits = "0.2.15"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
parallel = ["wasm-bindgen-rayon"]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"


[profile.release]
opt-level = 's'

